# mlops-from-training-to-serving

./: .gitignore  README.md  pyproject.toml
02_docker/: Dockerfile  train.py
03_experiment/: Dockerfile  another_run.py  docker-compose.yaml  optuna_tutorial.py  same_run.py  section2_train.py  section3_train.py
04_data/: docker-compose.yaml  download_data.py  train.py  upload_data.py
05_model_registry/: docker-compose.yaml  section1_load_model.py  section1_train.py  section2_load_model.py
06_batch_serving/: docker-compose.yaml  mlflow.Dockerfile  train.py  upload_data.py
06_batch_serving/section1/: batch.Dockerfile  docker_predict.py  local_predict.py  make_batch_data.py  requirements.txt
06_batch_serving/section2/: batch_image.Dockerfile  model_predict.py  requirements.txt
07_api_serving/: api.Dockerfile  app.py  download_model.py  fastapi_crud_tutorial.py  fastapi_schema_tutorial.py  fastapi_tutorial.py  train.py
